--- a/index.html
+++ b/index.html
@@ -49,5 +49,77 @@
     </main>
   </div>
 </section>
+
+<section class="secondSection">
+  <img src="Images/logoBig.png" alt="flower" class="backgroundElem-section2">
+  <div class="orange-background-decoration"></div>
+  <div class="secondSectionContainer">
+    <div class="sectionHead">
+      <img src="Images/logoGray.png" alt="grayFlower" class="gray-logo">
+      <span class="boldText sectionIntroduction">Who we are</span>
+      <div class="limit">
+        <hr>
+      </div>
+      <span class="boldText sectionHeader">ABOUT US</span>
+    </div>
+    <div class="aboutUsSection1">
+      <img src="Images/aboutUsImg1.png" alt="salad">
+      <div class="textContainer">
+        <div class="aboutUsTextHeader"><span class="boldText">WOODIES</span> is the <span class="boldText">home of modern wooden furniture</span>
+        </div>
+        <span class="aboutUsText">the answer to your need for furniture with shapes, sizes and colors. </span>
+      </div>
+    </div>
+    <div class="aboutUsSection2">
+      <div class="textContainer-modified">
+        <div class="aboutUsTextHeader">Customized furniture <span class="boldText">made just for you</span></div>
+        <span class="aboutUsText">Get it easy to adjust furniture to the shape and size of your dwelling or business.</span>
+      </div>
+      <img src="Images/aboutUsImg2.png" alt="wooden-spoons" class="aboutUsImg">
+    </div>
+  </div>
+</section>
+
+<section class="thirdSection">
+  <div class="sectionHead">
+    <img src="Images/logoGray.png" alt="grayFlower" class="gray-logo">
+    <span class="boldText sectionIntroduction">How to custom</span>
+    <div class="limit2">
+      <hr>
+    </div>
+    <span class="boldText sectionHeader">HOW IT WORKS</span>
+  </div>
+  <div class="customDivs">
+    <div class="customDiv">
+      <div class="orderedCustomDiv">
+        <span class="order">1</span>
+        <img src="Images/customImg1.png" alt="pin1">
+      </div>
+      <div class="customDescription">Choose design</div>
+    </div>
+    <div class="customDiv">
+      <div class="orderedCustomDiv">
+        <span class="order">2</span>
+        <img src="Images/customImg2.png" alt="pin2">
+      </div>
+      <div class="customDescription">Area measuring</div>
+    </div>
+    <div class="customDiv">
+      <div class="orderedCustomDiv">
+        <span class="order">3</span>
+        <img src="Images/customImg3.png" alt="pin3">
+      </div>
+      <div class="customDescription">Budgeting</div>
+    </div>
+    <div class="customDiv">
+      <div class="orderedCustomDiv">
+        <span class="order">4</span>
+        <img src="Images/customImg4.png" alt="pin4">
+      </div>
+      <div class="customDescription">Production</div>
+    </div>
+  </div>
+  <input type="button" value="Get Personalized Now" class="explore edit">
+</section>
 </body>
 </html>
