--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Proiectarea Paginilor Web</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
@@ -121,5 +122,158 @@
   </div>
   <input type="button" value="Get Personalized Now" class="explore edit">
 </section>
+
+<section class="fourthSection">
+  <div class="sectionHead">
+    <img src="Images/logoGray.png" alt="grayFlower" class="gray-logo">
+    <span class="boldText sectionIntroduction">What we have</span>
+    <div class="limit3">
+      <hr>
+    </div>
+    <span class="boldText sectionHeader">CATEGORIES</span>
+  </div>
+
+  <div class="categoriesContainer">
+    <div class="categoriesItem itemPinkBackground">
+      <span class="categoriesTitle">Desk</span>
+      <img src="Images/categoriesImg1.png" alt="table" class="categoriesImg">
+      <input type="button" value="Shop Now" class="categoriesButton">
+    </div>
+
+    <div class="categoriesItem itemOrangeBackground">
+      <span class="categoriesTitle">Chair</span>
+      <img src="Images/categoriesImg2.png" alt="chair" class="categoriesImg2">
+      <input type="button" value="Shop Now" class="categoriesButton">
+    </div>
+
+    <div class="categoriesItem itemBlueBackground">
+      <span class="categoriesTitle">Kitchenware</span>
+      <img src="Images/categoriesImg3.png" alt="plates" class="categoriesImg3">
+      <input type="button" value="Shop Now" class="categoriesButton">
+    </div>
+
+    <div class="categoriesItem itemPinkBackground">
+      <span class="categoriesTitle">Book Shelf</span>
+      <img src="Images/categoriesImg4.png" alt="bookshelf" class="categoriesImg4">
+      <input type="button" value="Shop Now" class="categoriesButton">
+    </div>
+
+    <div class="categoriesItem itemOrangeBackground">
+      <span class="categoriesTitle">Electronics</span>
+      <img src="Images/categoriesdImg5.png" alt="radio" class="categoriesImg5">
+      <input type="button" value="Shop Now" class="categoriesButton">
+    </div>
+
+  </div>
+</section>
+
+<section class="fifthSection">
+  <div class="sectionHead">
+    <img src="Images/logoGray.png" alt="grayFlower" class="gray-logo">
+    <span class="boldText sectionIntroduction">What they say</span>
+    <div class="limit3">
+      <hr>
+    </div>
+    <span class="boldText sectionHeader">TESTIMONY</span>
+  </div>
+
+  <div class="fifthSectionContainer">
+    <div class="interiorDesignImg">
+      <img src="Images/testimonyImg1.png" alt="interiorDesign" class="interiorImg">
+      <img src="Images/testimonyImg2.png" alt="interiorDesign" class="interiorImg">
+    </div>
+    <div class="fifthSectionBottom">
+      <div class="review">
+        <div class="stars">
+          <i class="material-icons star">star</i>
+          <i class="material-icons star">star</i>
+          <i class="material-icons star">star</i>
+          <i class="material-icons star">star</i>
+          <i class="material-icons star">star</i>
+        </div>
+        <div class="reviewText">
+          My experience with WOODIES is a complete success, from customed furniture, range of product, modern design,
+          purchasing experience, the delivery and newsletter. Litterally everything is great. Thank you!
+        </div>
+        <div class="user">
+          <img src="Images/avatar.png" alt="avatar" class="avatar">
+          <div class="userName">
+            <span>Sandra Dewi</span>
+            <span>Jakarta Selatan</span>
+          </div>
+        </div>
+      </div>
+      <div class="navigate">
+        <div class="navigation">
+          <div>
+            <img src="Images/Arrow%202.png" alt="arrowLeft">
+            <span>Previous</span>
+          </div>
+          <div>
+            <span>Next</span>
+            <img src="Images/Arrow%201.png" alt="arrowRight">
+          </div>
+        </div>
+        <div class="dots">
+          <img src="Images/Frame%208.png" alt="dots">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contacts">
+  <div class="contactsText">
+    <span class="boldText">Subscribe to our newsletter</span>
+    A monthly digest of the new WOODIES products, hot offers, and resources.
+  </div>
+  <div class="contactUs">
+    <input type="text" placeholder="Your Email address" class="contactInput">
+    <input type="button" value="Subscribe" class="subscribe">
+  </div>
+</section>
+<footer>
+  <div class="footerRight">
+    <div>
+      <hr>
+    </div>
+    <div class="footerContactsContainer">
+      <div class="footerBlock">
+        <div class="logoMain footerLogo">
+          <img src="Images/logo.png" alt="logo">
+          <span class="logo">WOODIES</span>
+        </div>
+        <span>(012) 8967453</span>
+        <span>woodies@gmail.com</span>
+        <span>Jakarta, Indonesia</span>
+      </div>
+      <div class="footerBlock">
+        <span class="boldText">Product</span>
+        <span>Furnitures</span>
+        <span>Packages</span>
+        <span>Services</span>
+      </div>
+      <div class="footerBlock">
+        <span class="boldText">Resources</span>
+        <span>Blog</span>
+        <span>FAQs</span>
+        <span>Contact Us</span>
+      </div>
+      <div class="footerBlock">
+        <span class="boldText">Company</span>
+        <span>About Us</span>
+        <span>Jobs</span>
+        <span>Our Team</span>
+      </div>
+      <div class="footerBlock">
+        <span class="boldText">Follow Us</span>
+        <span>Facebook</span>
+        <span>Instagram</span>
+        <span>Twitter</span>
+      </div>
+    </div>
+    <div class="footerBottomText">© 2020 WOODIES</div>
+  </div>
+  <img src="Images/footerImg2.png" alt="desk" class="footerImg">
+</footer>
 </body>
 </html>
